--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-fastapi
-uvicorn[standard]
-asyncio
-google-cloud-firestore
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+websockets==12.0
+google-cloud-firestore==2.13.1
+google-cloud-speech==2.21.0
+redis==5.0.1
+boto3==1.34.0
+python-multipart==0.0.6
