--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 websockets==12.0
-google-cloud==0.34.0
+google-cloud-aiplatform==1.42.0
 google-cloud-firestore==2.13.1
 google-cloud-speech==2.21.0
 redis==5.0.1
