fix: change content with prompt if not multimodal

--- a/models.config
+++ b/models.config
@@ -5,7 +5,7 @@
       "endpoint_id": "6641949632278560768",
       "display_name": "MedGemma 27B",
       "description": "Génère un rapport médical détaillé à partir de données textuelles et d'images. Le rapport doit être condensé et précis.",
-      "supports_images": true,
+      "supports_images": false,
       "max_images_per_request": 5,
       "supported_image_formats": ["jpeg", "png", "webp", "heic"],
       "max_image_size_mb": 5,
