fix(vertex): 4b supports image

--- a/models.config
+++ b/models.config
@@ -4,7 +4,7 @@
       "model_type": "google_medgemma-4b-text-it-mg-one-click-deploy",
       "endpoint_id": "6641949632278560768",
       "display_name": "MedGemma 4B",
-      "supports_images": false,
+      "supports_images": true,
       "max_images_per_request": 5,
       "supported_image_formats": ["jpeg", "png", "webp", "heic"],
       "max_image_size_mb": 5,
