fix(build): ai client

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ Pillow==10.1.0
 typing-extensions==4.8.0
 markdown-pdf==1.7
 mysql-connector-python==8.2.0
+google-auth-oauthlib
+google-auth-httplib2
 openai
