--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ redis==5.0.1
 python-multipart==0.0.6
 python-dotenv==1.0.0
 Pillow==10.1.0
-typing-extensions==4.8.0
+typing-extensions>=4.11.0
 markdown-pdf==1.7
 mysql-connector-python==8.2.0
 google-auth-oauthlib
 google-auth-httplib2
-openai
+openai==1.59.6
+httpx==0.27.2
